--- a/P6E0B5200.opf/meta.yml
+++ b/P6E0B5200.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     1bd9c575f8344aa0a20915a78bf51fd3:
       base_file: v047.txt
       image_group_id: I1PD95892
-      title: ''
+      title: ནོར་བདག་གཙོ་འཁོར་ལྔའི་བསྟོད་པ་དབྱིག་གི་ཆར་འབེབས་ཞེས་བྱ་བ།
       total_pages: 1464
       volume_number: 47
