--- a/P6E0B5200.opf/meta.yml
+++ b/P6E0B5200.opf/meta.yml
@@ -8,3 +8,5 @@ source_metadata:
       title: ནོར་བདག་གཙོ་འཁོར་ལྔའི་བསྟོད་པ་དབྱིག་གི་ཆར་འབེབས་ཞེས་བྱ་བ།
       total_pages: 1464
       volume_number: 47
+vol2fn:
+  v047: v047.txt
