--- a/D8664B863.opf/index.yml
+++ b/D8664B863.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   23335c6a24144ad69f21b9d25fe70e46:
     parts: {}
+    work_id: N3789
     span:
-    - vol: 47
+    - base: '1478'
       start: 0
       end: 1881
-    work_id: N3789
